base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo-app-bg
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app-bg
  template:
    metadata:
      labels:
        app: demo-app-bg
    spec:
      containers:
      - name: app
        image: yeasy/simple-web
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
  strategy:
    blueGreen:
      activeService: superapi-svc-active
      previewService: superapi-svc-preview
      autoPromotionEnabled: true
