base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sl-demo-app
spec:
  ports:
    - name: http
      port: 8088
      targetPort: 80
  selector:
    app: sl-demo-app
