base/superapi-svc-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: superapi-svc-active
spec:
  ports:
    - name: http
      port: 8088
      targetPort: 80
  selector:
    app: demo-app-bg
