base/superapi-svc-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: superapi-svc-preview
spec:
  ports:
    - name: http
      port: 8088
      targetPort: 80
  selector:
    app: sl-demo-app
