base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    # alb.ingress.kubernetes.io/group.name: olek-eks-test
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0655d3bb5e6fe1d0a, subnet-0c24587c742adcd8d
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    external-dns.alpha.kubernetes.io/hostname: nginx.data-lake-dev.arelion.io


  
    # load balancer priority, lower numbers are evaluated first
    # https://docs.aws.amazon.com/elasticloadbalancing/latest/application/listener-update-rules.html#update-rule-priority
    # alb.ingress.kubernetes.io/scheme: internal
    # alb.ingress.kubernetes.io/group.order: "10"
    # alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30" # in seconds
    # alb.ingress.kubernetes.io/healthcheck-path: /
    # alb.ingress.kubernetes.io/healty-threshold-count: "1"
    # by default, it will create a listener rule on port 80
    # you can specify both ports as well like this: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 80}]'
    # alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    # alb.ingress.kubernetes.io/target-type: ip
  name: demo-app-bg
spec:
  # if you have the `ingressclass.kubernetes.io/is-default-class=true`
  # annotation on the ingress class, you don't need this
  # ingressClassName: aws-alb
  rules:
    - host: nginx.data-lake-dev.arelion.io
      http:
        paths:
          - backend:
              service:
                name: superapi-svc-active
                port:
                  number: 80
            path: /
            pathType: Prefix
  # the ALB will fetch the right certificate from ACM
  # you can also specify manually using `alb.ingress.kubernetes.io/certificate-arn` annotation on the Ingress
  # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/guide/ingress/annotations/#certificate-arn
  # tls:
  #   - hosts:
  #       - "*.example.com"
  #     secretName: example-tls

# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: demo-app-bg
#   labels:
#     app: demo-app-bg
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internet-facing
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /*
#             backend:
#               serviceName: demo-app-bg
#               servicePort: 8088
